Fix layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,82 @@
 header {
-    background-color: #312A3F;
-    padding: 5px;
-    padding-left: 20px;
+  background-color: #312A3F;
+  padding: 5px;
+  padding-left: 20px;
 }
 
 header h1 {
-    color: antiquewhite;
+  color: antiquewhite;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #eeeeee;
+  margin: 0;
+  padding: 0;
+  background-color: #eeeeee;
 }
 
 .container {
   margin: 0 auto;
-  width: 100%;
+  display: grid;
+  grid-template-columns: 200px auto 200px;
 }
 
 .menu {
   margin: 0 auto;
-  float: left;
-  width: 20%;
+  width: 100%;
 }
 
 .wrap {
   margin: 0 auto;
-  float: right;
-  width: 80%;
+  width: 100%;
+}
+
+.keyboard {
+  margin: 0 auto;
+  width: 100%;
 }
 
 #equationArea {
-    min-height: 100px;
-    vertical-align: middle;
-    background-color: #ffffff;
-    padding: 5px;
-    padding-top: 20px;
-    font-size: 1em;
+  min-height: 100px;
+  vertical-align: middle;
+  background-color: #ffffff;
+  padding-top: 20px;
+  font-size: 1em;
 }
 
 #stackArea {
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+  display:block;
   width:100%;
-  padding: 5px;
+  margin:0;
+  padding:4px;
+  background:#EEF;
+  border:1px solid #333;
+  overflow-y:auto;
+  overflow-x:hidden;
   font-family: monospace;
+  resize: none;
 }
 
 .menu button {
-    background-color: #312A3F; /* Green background */
-    border: 1px solid #7f6da3; /* Green border */
-    color: white; /* White text */
-    padding: 10px 24px; /* Some padding */
-    cursor: pointer; /* Pointer/hand icon */
-    width: 100%; /* Set a width if needed */
-    display: block; /* Make the buttons appear below each other */
-  }
-  
+  background-color: #312A3F; 
+  border: 1px solid #7f6da3; 
+  color: white; 
+  padding: 10px 24px; 
+  cursor: pointer; 
+  width: 100%; 
+  display: block; 
+}
+
+.button-w1 {
+  min-width: 40px;
+  height: 40px;
+  font-size: 0.8em;
+}
+
+.button-w2 {
+  min-width: 80px;
+  height: 40px;
+  font-size: 0.8em;
+}
